--- a/index.html
+++ b/index.html
@@ -6,5 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sorting Algorithm Visualizer</title>
   </head>
-  <body></body>
+  <body>
+    <header class="controls">
+      <nav class="controls-nav">
+        <div class="controls-nav-generate-container">
+          <button id="generate-array-btn" class="primary-btn">
+            Generate new array
+          </button>
+        </div>
+        <div class="controls-nav-parameters-container">
+          <div class="controls-nav-parameters-stack">
+            <h3># of array elements</h3>
+            <input
+              type="number"
+              name="array-size"
+              class="primary-input"
+              id="array-size-input"
+              value="10"
+              max="300"
+              min="5"
+              required
+            />
+          </div>
+          <div class="controls-nav-parameters-stack">
+            <h3>Sort speed (higher is faster)</h3>
+            <input
+              type="number"
+              name="sort-speed"
+              class="primary-input"
+              id="sort-speed-input"
+              value="3"
+              min="1"
+              max="5"
+              required
+            />
+          </div>
+        </div>
+        <div class="controls-nav-algorithm-container">
+          <div>
+            <button id="bubble-sort-btn" class="secondary-btn">
+              Bubble Sort
+            </button>
+          </div>
+          <div>
+            <button id="insertion-sort-btn" class="secondary-btn">
+              Insertion Sort
+            </button>
+          </div>
+          <div>
+            <button id="quick-sort-btn" class="secondary-btn">
+              Quick Sort
+            </button>
+          </div>
+          <div>
+            <button id="merge-sort-btn" class="secondary-btn">
+              Merge Sort
+            </button>
+          </div>
+          <div>
+            <button id="heap-sort-btn" class="secondary-btn">Heap Sort</button>
+          </div>
+        </div>
+        <div class="controls-nav-start-container">
+          <div><button class="primary-btn" id="start-btn">Sort!</button></div>
+          <div><button class="primary-btn" id="stop-btn">Stop</button></div>
+          <div><button class="primary-btn" id="reset-btn">Reset</button></div>
+        </div>
+      </nav>
+    </header>
+    <main class="visualizer">
+      <div id="visualizer-container"></div>
+    </main>
+    <footer id="footer">
+      <p>Le Kang Wang &copy; 2021</p>
+    </footer>
+  </body>
 </html>
