added random generation and render functions

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             class="primary-input"
             id="array-size-input"
             value="10"
-            max="300"
+            max="100"
             min="5"
             required
           />
@@ -87,5 +87,9 @@
     </footer>
 
     <!--JS Scripts-->
+    <script src="js/declarations.js"></script>
+    <script src="js/render.js"></script>
+    <script src="js/generate.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
