added pure sort algorithm implementations

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
     <script src="js/declarations.js"></script>
     <script src="js/render.js"></script>
     <script src="js/generate.js"></script>
+    <script src="js/sorts/bubble.js"></script>
+    <script src="js/sorts/insertion.js"></script>
+    <script src="js/sorts/quick.js"></script>
+    <script src="js/sorts/merge.js"></script>
+    <script src="js/sorts/heap.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
