code optimization / logo added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/visualizer.css" />
     <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="icon" type="image/png" href="bar-logo.png?" />
   </head>
   <body>
     <header class="controls">
@@ -32,7 +33,7 @@
             id="array-size-input"
             value="10"
             max="100"
-            min="5"
+            min="1"
             required
           />
         </div>
@@ -52,23 +53,32 @@
       </div>
       <div class="controls-algorithm-container">
         <div>
-          <button id="bubble-sort-btn" class="secondary-btn">
+          <button id="bubble-sort-btn" class="secondary-btn sorting-algo-btn">
             Bubble Sort
           </button>
         </div>
         <div>
-          <button id="insertion-sort-btn" class="secondary-btn">
+          <button
+            id="insertion-sort-btn"
+            class="secondary-btn sorting-algo-btn"
+          >
             Insertion Sort
           </button>
         </div>
         <div>
-          <button id="quick-sort-btn" class="secondary-btn">Quick Sort</button>
+          <button id="quick-sort-btn" class="secondary-btn sorting-algo-btn">
+            Quick Sort
+          </button>
         </div>
         <div>
-          <button id="merge-sort-btn" class="secondary-btn">Merge Sort</button>
+          <button id="merge-sort-btn" class="secondary-btn sorting-algo-btn">
+            Merge Sort
+          </button>
         </div>
         <div>
-          <button id="heap-sort-btn" class="secondary-btn">Heap Sort</button>
+          <button id="heap-sort-btn" class="secondary-btn sorting-algo-btn">
+            Heap Sort
+          </button>
         </div>
       </div>
       <div class="controls-start-container">
